--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{imerial}.github.io/{weather-react}",
+  "homepage": "http://imerial.github.io/weatherApp_react",
   "name": "weather-react",
   "version": "0.1.0",
   "private": true,
@@ -33,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
