--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://imerial.github.io/weatherApp_react",
+  "homepage": "https://imerial.github.io/weatherApp_react",
   "name": "weather-react",
   "version": "0.1.0",
   "private": true,
